[gd_scene load_steps=13 format=3 uid="uid://dccijlgfscbxi"]

[ext_resource type="PackedScene" uid="uid://dwfivcym0skda" path="res://scenes/entity/QuadEntity.tscn" id="1_h84w8"]
[ext_resource type="Script" uid="uid://bw12smqrutldf" path="res://scenes/models/quad_entity_robot_3.gd" id="2_8ih53"]
[ext_resource type="PackedScene" uid="uid://cobr225vkbh0b" path="res://scenes/models/robot_3.tscn" id="2_h84w8"]
[ext_resource type="PackedScene" uid="uid://cvqfp2l6cegs8" path="res://scenes/UI/indicators/ProgressBar.tscn" id="3_4ar2q"]
[ext_resource type="Shader" uid="uid://cc18tpomiri80" path="res://shaders/new_pipeline/outline_new_pipeline_unshaded.gdshader" id="5_jaust"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jaust"]
shading_mode = 0
albedo_color = Color(0.30980393, 1, 1, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_pspuw"]
material = SubResource("StandardMaterial3D_jaust")
radial_segments = 8
rings = 4

[sub_resource type="Curve" id="Curve_pspuw"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.14000002, 1), 0.0, 0.0, 0, 0, Vector2(0.48666665, 1), 0.0, 0.0, 0, 0, Vector2(0.9866667, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_fpjiy"]
curve = SubResource("Curve_pspuw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jaust"]
emission_shape = 1
emission_sphere_radius = 0.25
direction = Vector3(0, 1, 0)
initial_velocity_min = 3.0
initial_velocity_max = 3.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -5.000002
linear_accel_max = -5.000002
radial_accel_min = -1.0700022
radial_accel_max = -1.0700022
scale_curve = SubResource("CurveTexture_fpjiy")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_voo7p"]
render_priority = 0
shader = ExtResource("5_jaust")
shader_parameter/original_color = Color(1, 1, 1, 1)
shader_parameter/outline_color = Color(0.5, 0.5, 0.5, 1)
shader_parameter/use_mask = false

[sub_resource type="SphereMesh" id="SphereMesh_mcyeo"]
material = SubResource("ShaderMaterial_voo7p")
radius = 0.2
height = 0.4

[node name="QuadEntity" node_paths=PackedStringArray("quad_object") instance=ExtResource("1_h84w8")]
script = ExtResource("2_8ih53")
move_speed = 5.0
turn_speed = 12.566
step_offset = 0.5
quad_object = NodePath("robot3")

[node name="IKQuadContainer" parent="." index="0" node_paths=PackedStringArray("quad_object")]
quad_object = NodePath("../robot3")
step_distance = 0.001
step_time = 0.025

[node name="FrontLeftIKMarker" parent="IKQuadContainer/MarkerContainer" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.333, -0.609, 1.354)

[node name="FrontRightIKMarker" parent="IKQuadContainer/MarkerContainer" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2440919, -0.6090472, 1.3727729)

[node name="BackLeftIKMarker" parent="IKQuadContainer/MarkerContainer" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.3149648, -0.55274844, -0.9550772)

[node name="BackRightIKMarker" parent="IKQuadContainer/MarkerContainer" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2666082, -0.55274844, -0.9341467)

[node name="FrontLeftIKTarget" parent="IKQuadContainer/TargetContainer" index="0"]
transform = Transform3D(0.9839536, 0, 0.17842442, 0, 1, 0, -0.17842442, 0, 0.9839536, 2.9658523, -2.437, 3.4646592)

[node name="MeshInstance3D4" type="MeshInstance3D" parent="IKQuadContainer/TargetContainer/FrontLeftIKTarget" index="0"]
transform = Transform3D(0.17711166, 0, 0.032116394, 0, 0.18, 0, -0.032116394, 0, 0.17711166, 2.9658523, -2.437, 3.4646592)
top_level = true
visible = false
mesh = SubResource("CapsuleMesh_pspuw")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="FrontRightIKTarget" parent="IKQuadContainer/TargetContainer" index="1"]
transform = Transform3D(0.9839536, 0, 0.17842442, 0, 1, 0, -0.17842442, 0, 0.9839536, -3.6634412, -2.6912894, 3.5281763)

[node name="MeshInstance3D4" type="MeshInstance3D" parent="IKQuadContainer/TargetContainer/FrontRightIKTarget" index="0"]
transform = Transform3D(0.17711166, 0, 0.032116394, 0, 0.18, 0, -0.032116394, 0, 0.17711166, -3.6634412, -2.6912894, 3.5281763)
top_level = true
visible = false
mesh = SubResource("CapsuleMesh_pspuw")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="BackLeftIKTarget" parent="IKQuadContainer/TargetContainer" index="2"]
transform = Transform3D(0.9839536, 0, 0.17842442, 0, 1, 0, -0.17842442, 0, 0.9839536, 3.9089122, -2.6912894, -3.2163205)

[node name="MeshInstance3D4" type="MeshInstance3D" parent="IKQuadContainer/TargetContainer/BackLeftIKTarget" index="0"]
transform = Transform3D(0.17711166, 0, 0.032116394, 0, 0.18, 0, -0.032116394, 0, 0.17711166, 3.9089122, -2.6912894, -3.2163205)
top_level = true
visible = false
mesh = SubResource("CapsuleMesh_pspuw")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="BackRightIKTarget" parent="IKQuadContainer/TargetContainer" index="3"]
transform = Transform3D(0.9839536, 0, 0.17842442, 0, 1, 0, -0.17842442, 0, 0.9839536, -3.1510615, -2.6912894, -3.7156925)

[node name="MeshInstance3D4" type="MeshInstance3D" parent="IKQuadContainer/TargetContainer/BackRightIKTarget" index="0"]
transform = Transform3D(0.17711166, 0, 0.032116394, 0, 0.18, 0, -0.032116394, 0, 0.17711166, -3.1510615, -2.6912894, -3.7156925)
top_level = true
visible = false
mesh = SubResource("CapsuleMesh_pspuw")
skeleton = NodePath("../../FrontLeftIKMarker")

[node name="DeathTimer" type="Timer" parent="." index="1"]
wait_time = 5.0
one_shot = true

[node name="cloudy_explosion" type="GPUParticles3D" parent="." index="2"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
layers = 17
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_jaust")
draw_pass_1 = SubResource("SphereMesh_mcyeo")

[node name="robot3" parent="." index="3" instance=ExtResource("2_h84w8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.26110005, 0)

[node name="ProgressBar" parent="robot3" index="1" instance=ExtResource("3_4ar2q")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8431396, 0)
